--- a/open-devops-server.yml
+++ b/open-devops-server.yml
@@ -2,3 +2,4 @@ mysql_s:
   db: root:wls20170807@tcp(localhost:3306)/open_devops?charset=utf8mb4&parseTime=True&loc=Local
   max: 10
   idle: 10
+rpc_addr: :8088
